# realstate

./: .gitignore  README.md  pyproject.toml
data/raw/: Sales_of_real_estate_N_per_quarter_per_municipality_2010_2025.xlsx
notebooks/: 1_clean.ipynb  3_price_correction.ipynb
